darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__markdown_error__schema_validation_missing_required_renders_block.snap
---
source: darkmatter/lib/tests/error_snapshots/markdown_error.rs
expression: out
---
⤫ MarkdownError: schema validation failed
┃ /tmp/test/plan.md
┃ Planner prompt
┃ missing spec: required but not provided at 3:1
Correct the frontmatter so it satisfies the declared $schema (or baseline schema).
