darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__markdown_error__schema_validation_multiple_problems_renders_block.snap
---
source: darkmatter/lib/tests/error_snapshots/markdown_error.rs
expression: out
---
⤫ MarkdownError: schema validation failed
┃ 
┃ /tmp/test/multi.md
┃ missing title: required but not provided at 2:1
┃ type version: "alpha" is not of type "number" at 4:10
┃ 
┃ Correct the frontmatter so it satisfies the declared $schema (or
┃ baseline schema).
