darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__markdown_error__schema_validation_preparation_failure_renders_summary.snap
---
source: darkmatter/lib/tests/error_snapshots/markdown_error.rs
assertion_line: 201
expression: out
---
⤫ MarkdownError: schema validation failed
┃ /tmp/test/bad-schema.md
┃ schema could not be prepared: $schema must be a mapping or array of
┃ mappings
Check that the document's $schema (or the baseline schema) is well-formed and resolvable.
