darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__markdown_error__schema_validation_preparation_failure_with_description_renders_summary.snap
---
source: darkmatter/lib/tests/error_snapshots/markdown_error.rs
assertion_line: 213
expression: out
---
⤫ MarkdownError: schema validation failed
┃ /tmp/test/unresolved.md
┃ Planner prompt
┃ schema could not be prepared: could not resolve ./missing.yaml
Check that the document's $schema (or the baseline schema) is well-formed and resolvable.
