darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__markdown_error__schema_validation_root_union_arm_index_renders_block.snap
---
source: darkmatter/lib/tests/error_snapshots/markdown_error.rs
expression: out
---
⤫ MarkdownError: schema validation failed
┃ 
┃ /tmp/test/union.md
┃ invalid kind: "draft" is not one of the allowed values at 3:7 (schema
┃ arm 2)
┃ 
┃ Correct the frontmatter so it satisfies the declared $schema (or
┃ baseline schema).
